Bug 402699 - Unknown account id mymoneystoreagemgr.cpp:142
Summary: Unknown account id mymoneystoreagemgr.cpp:142
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.2
Platform: Arch Linux Linux
: NOR critical
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-30 05:55 UTC by Rudolf Schmidt
Modified: 2018-12-31 15:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments
Error During Start Time (21.82 KB, image/png)
2018-12-30 05:55 UTC, Rudolf Schmidt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rudolf Schmidt 2018-12-30 05:55:20 UTC
Created attachment 117178 [details]
Error During Start Time

SUMMARY


STEPS TO REPRODUCE
1. Import Categories from German Common Account Template
2. Try to Delete a Category with several subcategories (Delete All)
3. You will get that an account id not found (see attachment)

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux Arch with updated stable release
Comment 1 Thomas Baumgart 2018-12-31 14:24:20 UTC
This is a weird one: you can delete categories that do not have sub-categories and then their parents. But once you have run into the described problem, you cannot even delete the ones that do not have sub-categories anymore.
Comment 2 Thomas Baumgart 2018-12-31 15:39:11 UTC
Git commit 3cace77952a9e3390160c51448a1587e71f04bbd by Thomas Baumgart.
Committed on 31/12/2018 at 15:40.
Pushed by tbaumgart into branch '5.0'.

Don't send engine notifications for removed objects

It could happen that modification notifications were still pending for
removed objects. One such instance was caused by removing whole account
hierarchies at once. This change fixes the problem.
FIXED-IN: 5.0.3

M  +31   -9    kmymoney/mymoney/mymoneyfile.cpp

https://commits.kde.org/kmymoney/3cace77952a9e3390160c51448a1587e71f04bbd