Don't send engine notifications for removed objects

It could happen that modification notifications were still pending for
removed objects. One such instance was caused by removing whole account
hierarchies at once. This change fixes the problem.

BUG: 402699
FIXED-IN: 5.0.3